<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true">

    <!-- Row for length -->
    <TableRow
        android:id="@+id/tableRowLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length" />

       <EditText
            android:id="@+id/editLength1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_weight="1" 
            android:text="@string/editLength1">


        </EditText>

        <Spinner
            android:id="@+id/lengthUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="2"
            android:entries="@array/lengthUnit" />
        
        <EditText
            android:id="@+id/editLength2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1" 
            android:text="@string/editLength2">

        </EditText>

        
  <!-- Row for volume  -->
    </TableRow>
    
    
        <TableRow
        android:id="@+id/tableRowVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume" />

        <EditText
            android:id="@+id/editVolume1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_weight="1" 
            android:text="@string/editVolume1">


        </EditText>

        <Spinner
            android:id="@+id/volumeUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="2"
            android:entries="@array/volumeUnit" />
        
       <EditText
            android:id="@+id/editVolume2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1" 
            android:text="@string/editVolume2">


        </EditText>

    </TableRow>
    
        
    <!-- Row for pressure  -->

    
    
        <TableRow
        android:id="@+id/tableRowPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure" />

        <EditText
            android:id="@+id/editPressure1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_weight="1" 
            android:text="@string/editPressure1">

        </EditText>

        <Spinner
            android:id="@+id/pressureUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="2"
            android:entries="@array/pressureUnit" />
        
        <EditText
            android:id="@+id/editPressure2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1" 
            android:text="@string/editPressure2">

        </EditText>

    </TableRow>


</TableLayout>